--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html2canvas": "^1.4.1",
     "https": "^1.0.0",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
